welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:3: error: type mismatch;
 found   : Double
 required: Int
		return inf(a,b);
                          ^