welcome.lessons.welcome.bat.bool1.Close10.scala.code
def close10(a:Int, b:Int): Int = {
	
		return inf(a,b);
	}




def inf (a:Int , b:Int): Double = {
	return (  0.5  *(a + b - Math.abs(b - a)));
}
